add_subdirectory(isPalindromInteger)
add_subdirectory(hammingdistance)
add_subdirectory(findmaxwithoutcomparison)
add_subdirectory(cardhandmask)
add_subdirectory(memorylimits)
add_subdirectory(endianess)
add_subdirectory(reversenumber)
add_subdirectory(reversebits)
add_subdirectory(reversebyteofint)
add_subdirectory(countingones)
