add_subdirectory(findkthlargestinmatrix)
add_subdirectory(search2dmatrix)
add_subdirectory(numberofislands)
add_subdirectory(nqueens)
add_subdirectory(surroundedregion)
add_subdirectory(spiralmatrix)
add_subdirectory(rotateimage)
add_subdirectory(setmatrixzeros)
add_subdirectory(shapecount)
add_subdirectory(maximumsquareallones)
add_subdirectory(maximumrectangleallones)
add_subdirectory(maximumrectangleinhistogram)
add_subdirectory(perfectrectangle)
add_subdirectory(smallestrectanglewithblackpixels)
add_subdirectory(maximumsumofrectanglenolargerthanK)
